L.output
Terminals unused in grammar

    NUL
    COMMOPEN
    COMMCLOSE


State 162 conflicts: 21 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: function_list

    2 declaration: VAR decl_param_list TYPEDEF type
    3            | TYPESTR decl_param_list

    4 decl_param_list: decl_assgn
    5                | decl_param_list ',' decl_assgn

    6 decl_assgn: decl_id ASSGN expression
    7           | decl_id

    8 decl_id: ID
    9        | ID '[' ar_expression ']'
   10        | ID '[' INT ']'

   11 function_list: funcproc
   12              | function_list funcproc

   13 funcproc: function
   14         | procedure
   15         | main_function

   16 function: FUNCTION ID '(' parameter_list ')' TYPEDEF type func_body

   17 procedure: FUNCTION ID '(' parameter_list ')' TYPEDEF VOID proc_body

   18 main_function: FUNCTION MAIN '(' parameter_list ')' TYPEDEF VOID proc_body

   19 parameter_list: ARG ids TYPEDEF type
   20               | parameter_list ENDST ARG ids TYPEDEF type
   21               | ε

   22 func_body: '{' function_list ret_statement '}'
   23          | '{' statement_list ret_statement '}'
   24          | '{' function_list statement_list ret_statement '}'
   25          | '{' '}'

   26 proc_body: '{' function_list '}'
   27          | '{' statement_list '}'
   28          | '{' function_list statement_list '}'
   29          | '{' '}'

   30 iter_body: '{' statement_list '}'
   31          | '{' '}'
   32          | statement

   33 statement: iter_statement
   34          | if_statement
   35          | expr_statement
   36          | assgn_statement
   37          | decl_statement
   38          | '{' statement_list '}'

   39 update: ID ASSGN expression

   40 statement_list: statement
   41               | statement_list statement

   42 decl_statement: declaration ENDST

   43 assgn_statement: ids ASSGN expression ENDST

   44 expr_statement: expression ENDST

   45 if_statement: IF '(' expression ')' iter_body
   46             | IF '(' expression ')' iter_body ELSE iter_body

   47 iter_statement: WHILE '(' expression ')' iter_body
   48               | DO iter_body WHILE '(' expression ')' ENDST
   49               | FOR '(' assgn_statement expression ENDST update ')' iter_body

   50 ret_statement: RETURN expression ENDST

   51 ids: ID
   52    | ids ',' ID

   53 expression: not_expression
   54           | ar_expression
   55           | logic_expression
   56           | pr_expression

   57 not_expression: NOT pr_expression

   58 logic_expression: pr_expression logic pr_expression
   59                 | logic_expression logic pr_expression

   60 ar_expression: pr_expression arithmetic pr_expression
   61              | ar_expression arithmetic pr_expression

   62 pr_expression: '(' expression ')'
   63              | ID
   64              | literal
   65              | func_call
   66              | ADDRESS pr_expression
   67              | MUL pr_expression
   68              | STRLEN

   69 func_call: ID '(' arglist ')'
   70          | ID '(' ')'

   71 arglist: expression
   72        | arglist ',' expression

   73 logic: LOGICEQ
   74      | LOGICNOTEQ
   75      | LOGICMORE
   76      | LOGICLESS
   77      | LOGICMOREEQ
   78      | LOGICLESSEQ
   79      | LOGICAND
   80      | LOGICOR

   81 arithmetic: PLUS
   82           | MINUS
   83           | MUL
   84           | DIV

   85 type: TYPEBOOL
   86     | TYPECHAR
   87     | TYPEINT
   88     | TYPEREAL
   89     | TYPECHARPOINTER
   90     | TYPEINTPOINTER
   91     | TYPEREALPOINTER
   92     | TYPESTR

   93 literal: INT
   94        | REAL
   95        | CHAR
   96        | BOOL
   97        | STR


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 16 17 18 45 46 47 48 49 62 69 70
    ')' (41) 16 17 18 45 46 47 48 49 62 69 70
    ',' (44) 5 52 72
    '[' (91) 9 10
    ']' (93) 9 10
    '{' (123) 22 23 24 25 26 27 28 29 30 31 38
    '}' (125) 22 23 24 25 26 27 28 29 30 31 38
    error (256)
    INT <node_info> (258) 10 93
    ID <node_info> (259) 8 9 10 16 17 39 51 52 63 69 70
    REAL <node_info> (260) 94
    BOOL <node_info> (261) 96
    STR <node_info> (262) 97
    CHAR <node_info> (263) 95
    IF <node_info> (264) 45 46
    ELSE <node_info> (265) 46
    WHILE <node_info> (266) 47 48
    FOR <node_info> (267) 49
    DO <node_info> (268) 48
    VAR <node_info> (269) 2
    FUNCTION <node_info> (270) 16 17 18
    RETURN <node_info> (271) 50
    NUL <node_info> (272)
    VOID <node_info> (273) 17 18
    TYPEBOOL <node_info> (274) 85
    TYPECHAR <node_info> (275) 86
    TYPEINT <node_info> (276) 87
    TYPEREAL <node_info> (277) 88
    TYPECHARPOINTER <node_info> (278) 89
    TYPEINTPOINTER <node_info> (279) 90
    TYPEREALPOINTER <node_info> (280) 91
    TYPESTR <node_info> (281) 3 92
    LOGICEQ <node_info> (282) 73
    LOGICNOTEQ <node_info> (283) 74
    LOGICMORE <node_info> (284) 75
    LOGICLESS <node_info> (285) 76
    LOGICMOREEQ <node_info> (286) 77
    LOGICLESSEQ <node_info> (287) 78
    LOGICAND <node_info> (288) 79
    LOGICOR <node_info> (289) 80
    PLUS <node_info> (290) 81
    MINUS <node_info> (291) 82
    MUL <node_info> (292) 67 83
    DIV <node_info> (293) 84
    ARG <node_info> (294) 19 20
    ASSGN <node_info> (295) 6 39 43
    ENDST <node_info> (296) 20 42 43 44 48 49 50
    TYPEDEF <node_info> (297) 2 16 17 18 19 20
    NOT <node_info> (298) 57
    ADDRESS <node_info> (299) 66
    COMMOPEN <node_info> (300)
    COMMCLOSE <node_info> (301)
    MAIN <node_info> (302) 18
    STRLEN <node_info> (303) 68
    "lowest" (304)


Nonterminals, with rules where they appear

    $accept (57)
        on left: 0
    program <node_info> (58)
        on left: 1
        on right: 0
    declaration <node_info> (59)
        on left: 2 3
        on right: 42
    decl_param_list <node_info> (60)
        on left: 4 5
        on right: 2 3 5
    decl_assgn <node_info> (61)
        on left: 6 7
        on right: 4 5
    decl_id <node_info> (62)
        on left: 8 9 10
        on right: 6 7
    function_list <node_info> (63)
        on left: 11 12
        on right: 1 12 22 24 26 28
    funcproc <node_info> (64)
        on left: 13 14 15
        on right: 11 12
    function <node_info> (65)
        on left: 16
        on right: 13
    procedure <node_info> (66)
        on left: 17
        on right: 14
    main_function <node_info> (67)
        on left: 18
        on right: 15
    parameter_list <node_info> (68)
        on left: 19 20 21
        on right: 16 17 18 20
    func_body <node_info> (69)
        on left: 22 23 24 25
        on right: 16
    proc_body <node_info> (70)
        on left: 26 27 28 29
        on right: 17 18
    iter_body <node_info> (71)
        on left: 30 31 32
        on right: 45 46 47 48 49
    statement <node_info> (72)
        on left: 33 34 35 36 37 38
        on right: 32 40 41
    update <node_info> (73)
        on left: 39
        on right: 49
    statement_list <node_info> (74)
        on left: 40 41
        on right: 23 24 27 28 30 38 41
    decl_statement <node_info> (75)
        on left: 42
        on right: 37
    assgn_statement <node_info> (76)
        on left: 43
        on right: 36 49
    expr_statement <node_info> (77)
        on left: 44
        on right: 35
    if_statement <node_info> (78)
        on left: 45 46
        on right: 34
    iter_statement <node_info> (79)
        on left: 47 48 49
        on right: 33
    ret_statement <node_info> (80)
        on left: 50
        on right: 22 23 24
    ids <node_info> (81)
        on left: 51 52
        on right: 19 20 43 52
    expression <node_info> (82)
        on left: 53 54 55 56
        on right: 6 39 43 44 45 46 47 48 49 50 62 71 72
    not_expression <node_info> (83)
        on left: 57
        on right: 53
    logic_expression <node_info> (84)
        on left: 58 59
        on right: 55 59
    ar_expression <node_info> (85)
        on left: 60 61
        on right: 9 54 61
    pr_expression <node_info> (86)
        on left: 62 63 64 65 66 67 68
        on right: 56 57 58 59 60 61 66 67
    func_call <node_info> (87)
        on left: 69 70
        on right: 65
    arglist <node_info> (88)
        on left: 71 72
        on right: 69 72
    logic <node_info> (89)
        on left: 73 74 75 76 77 78 79 80
        on right: 58 59
    arithmetic <node_info> (90)
        on left: 81 82 83 84
        on right: 60 61
    type <node_info> (91)
        on left: 85 86 87 88 89 90 91 92
        on right: 2 16 19 20
    literal <node_info> (92)
        on left: 93 94 95 96 97
        on right: 64


State 0

    0 $accept: • program $end

    FUNCTION  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    funcproc       go to state 4
    function       go to state 5
    procedure      go to state 6
    main_function  go to state 7


State 1

   16 function: FUNCTION • ID '(' parameter_list ')' TYPEDEF type func_body
   17 procedure: FUNCTION • ID '(' parameter_list ')' TYPEDEF VOID proc_body
   18 main_function: FUNCTION • MAIN '(' parameter_list ')' TYPEDEF VOID proc_body

    ID    shift, and go to state 8
    MAIN  shift, and go to state 9


State 2

    0 $accept: program • $end

    $end  shift, and go to state 10


State 3

    1 program: function_list •
   12 function_list: function_list • funcproc

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 1 (program)

    funcproc       go to state 11
    function       go to state 5
    procedure      go to state 6
    main_function  go to state 7


State 4

   11 function_list: funcproc •

    $default  reduce using rule 11 (function_list)


State 5

   13 funcproc: function •

    $default  reduce using rule 13 (funcproc)


State 6

   14 funcproc: procedure •

    $default  reduce using rule 14 (funcproc)


State 7

   15 funcproc: main_function •

    $default  reduce using rule 15 (funcproc)


State 8

   16 function: FUNCTION ID • '(' parameter_list ')' TYPEDEF type func_body
   17 procedure: FUNCTION ID • '(' parameter_list ')' TYPEDEF VOID proc_body

    '('  shift, and go to state 12


State 9

   18 main_function: FUNCTION MAIN • '(' parameter_list ')' TYPEDEF VOID proc_body

    '('  shift, and go to state 13


State 10

    0 $accept: program $end •

    $default  accept


State 11

   12 function_list: function_list funcproc •

    $default  reduce using rule 12 (function_list)


State 12

   16 function: FUNCTION ID '(' • parameter_list ')' TYPEDEF type func_body
   17 procedure: FUNCTION ID '(' • parameter_list ')' TYPEDEF VOID proc_body

    ARG  shift, and go to state 14

    $default  reduce using rule 21 (parameter_list)

    parameter_list  go to state 15


State 13

   18 main_function: FUNCTION MAIN '(' • parameter_list ')' TYPEDEF VOID proc_body

    ARG  shift, and go to state 14

    $default  reduce using rule 21 (parameter_list)

    parameter_list  go to state 16


State 14

   19 parameter_list: ARG • ids TYPEDEF type

    ID  shift, and go to state 17

    ids  go to state 18


State 15

   16 function: FUNCTION ID '(' parameter_list • ')' TYPEDEF type func_body
   17 procedure: FUNCTION ID '(' parameter_list • ')' TYPEDEF VOID proc_body
   20 parameter_list: parameter_list • ENDST ARG ids TYPEDEF type

    ENDST  shift, and go to state 19
    ')'    shift, and go to state 20


State 16

   18 main_function: FUNCTION MAIN '(' parameter_list • ')' TYPEDEF VOID proc_body
   20 parameter_list: parameter_list • ENDST ARG ids TYPEDEF type

    ENDST  shift, and go to state 19
    ')'    shift, and go to state 21


State 17

   51 ids: ID •

    $default  reduce using rule 51 (ids)


State 18

   19 parameter_list: ARG ids • TYPEDEF type
   52 ids: ids • ',' ID

    TYPEDEF  shift, and go to state 22
    ','      shift, and go to state 23


State 19

   20 parameter_list: parameter_list ENDST • ARG ids TYPEDEF type

    ARG  shift, and go to state 24


State 20

   16 function: FUNCTION ID '(' parameter_list ')' • TYPEDEF type func_body
   17 procedure: FUNCTION ID '(' parameter_list ')' • TYPEDEF VOID proc_body

    TYPEDEF  shift, and go to state 25


State 21

   18 main_function: FUNCTION MAIN '(' parameter_list ')' • TYPEDEF VOID proc_body

    TYPEDEF  shift, and go to state 26


State 22

   19 parameter_list: ARG ids TYPEDEF • type

    TYPEBOOL         shift, and go to state 27
    TYPECHAR         shift, and go to state 28
    TYPEINT          shift, and go to state 29
    TYPEREAL         shift, and go to state 30
    TYPECHARPOINTER  shift, and go to state 31
    TYPEINTPOINTER   shift, and go to state 32
    TYPEREALPOINTER  shift, and go to state 33
    TYPESTR          shift, and go to state 34

    type  go to state 35


State 23

   52 ids: ids ',' • ID

    ID  shift, and go to state 36


State 24

   20 parameter_list: parameter_list ENDST ARG • ids TYPEDEF type

    ID  shift, and go to state 17

    ids  go to state 37


State 25

   16 function: FUNCTION ID '(' parameter_list ')' TYPEDEF • type func_body
   17 procedure: FUNCTION ID '(' parameter_list ')' TYPEDEF • VOID proc_body

    VOID             shift, and go to state 38
    TYPEBOOL         shift, and go to state 27
    TYPECHAR         shift, and go to state 28
    TYPEINT          shift, and go to state 29
    TYPEREAL         shift, and go to state 30
    TYPECHARPOINTER  shift, and go to state 31
    TYPEINTPOINTER   shift, and go to state 32
    TYPEREALPOINTER  shift, and go to state 33
    TYPESTR          shift, and go to state 34

    type  go to state 39


State 26

   18 main_function: FUNCTION MAIN '(' parameter_list ')' TYPEDEF • VOID proc_body

    VOID  shift, and go to state 40


State 27

   85 type: TYPEBOOL •

    $default  reduce using rule 85 (type)


State 28

   86 type: TYPECHAR •

    $default  reduce using rule 86 (type)


State 29

   87 type: TYPEINT •

    $default  reduce using rule 87 (type)


State 30

   88 type: TYPEREAL •

    $default  reduce using rule 88 (type)


State 31

   89 type: TYPECHARPOINTER •

    $default  reduce using rule 89 (type)


State 32

   90 type: TYPEINTPOINTER •

    $default  reduce using rule 90 (type)


State 33

   91 type: TYPEREALPOINTER •

    $default  reduce using rule 91 (type)


State 34

   92 type: TYPESTR •

    $default  reduce using rule 92 (type)


State 35

   19 parameter_list: ARG ids TYPEDEF type •

    $default  reduce using rule 19 (parameter_list)


State 36

   52 ids: ids ',' ID •

    $default  reduce using rule 52 (ids)


State 37

   20 parameter_list: parameter_list ENDST ARG ids • TYPEDEF type
   52 ids: ids • ',' ID

    TYPEDEF  shift, and go to state 41
    ','      shift, and go to state 23


State 38

   17 procedure: FUNCTION ID '(' parameter_list ')' TYPEDEF VOID • proc_body

    '{'  shift, and go to state 42

    proc_body  go to state 43


State 39

   16 function: FUNCTION ID '(' parameter_list ')' TYPEDEF type • func_body

    '{'  shift, and go to state 44

    func_body  go to state 45


State 40

   18 main_function: FUNCTION MAIN '(' parameter_list ')' TYPEDEF VOID • proc_body

    '{'  shift, and go to state 42

    proc_body  go to state 46


State 41

   20 parameter_list: parameter_list ENDST ARG ids TYPEDEF • type

    TYPEBOOL         shift, and go to state 27
    TYPECHAR         shift, and go to state 28
    TYPEINT          shift, and go to state 29
    TYPEREAL         shift, and go to state 30
    TYPECHARPOINTER  shift, and go to state 31
    TYPEINTPOINTER   shift, and go to state 32
    TYPEREALPOINTER  shift, and go to state 33
    TYPESTR          shift, and go to state 34

    type  go to state 47


State 42

   26 proc_body: '{' • function_list '}'
   27          | '{' • statement_list '}'
   28          | '{' • function_list statement_list '}'
   29          | '{' • '}'

    INT       shift, and go to state 48
    ID        shift, and go to state 49
    REAL      shift, and go to state 50
    BOOL      shift, and go to state 51
    STR       shift, and go to state 52
    CHAR      shift, and go to state 53
    IF        shift, and go to state 54
    WHILE     shift, and go to state 55
    FOR       shift, and go to state 56
    DO        shift, and go to state 57
    VAR       shift, and go to state 58
    FUNCTION  shift, and go to state 1
    TYPESTR   shift, and go to state 59
    MUL       shift, and go to state 60
    NOT       shift, and go to state 61
    ADDRESS   shift, and go to state 62
    STRLEN    shift, and go to state 63
    '('       shift, and go to state 64
    '{'       shift, and go to state 65
    '}'       shift, and go to state 66

    declaration       go to state 67
    function_list     go to state 68
    funcproc          go to state 4
    function          go to state 5
    procedure         go to state 6
    main_function     go to state 7
    statement         go to state 69
    statement_list    go to state 70
    decl_statement    go to state 71
    assgn_statement   go to state 72
    expr_statement    go to state 73
    if_statement      go to state 74
    iter_statement    go to state 75
    ids               go to state 76
    expression        go to state 77
    not_expression    go to state 78
    logic_expression  go to state 79
    ar_expression     go to state 80
    pr_expression     go to state 81
    func_call         go to state 82
    literal           go to state 83


State 43

   17 procedure: FUNCTION ID '(' parameter_list ')' TYPEDEF VOID proc_body •

    $default  reduce using rule 17 (procedure)


State 44

   22 func_body: '{' • function_list ret_statement '}'
   23          | '{' • statement_list ret_statement '}'
   24          | '{' • function_list statement_list ret_statement '}'
   25          | '{' • '}'

    INT       shift, and go to state 48
    ID        shift, and go to state 49
    REAL      shift, and go to state 50
    BOOL      shift, and go to state 51
    STR       shift, and go to state 52
    CHAR      shift, and go to state 53
    IF        shift, and go to state 54
    WHILE     shift, and go to state 55
    FOR       shift, and go to state 56
    DO        shift, and go to state 57
    VAR       shift, and go to state 58
    FUNCTION  shift, and go to state 1
    TYPESTR   shift, and go to state 59
    MUL       shift, and go to state 60
    NOT       shift, and go to state 61
    ADDRESS   shift, and go to state 62
    STRLEN    shift, and go to state 63
    '('       shift, and go to state 64
    '{'       shift, and go to state 65
    '}'       shift, and go to state 84

    declaration       go to state 67
    function_list     go to state 85
    funcproc          go to state 4
    function          go to state 5
    procedure         go to state 6
    main_function     go to state 7
    statement         go to state 69
    statement_list    go to state 86
    decl_statement    go to state 71
    assgn_statement   go to state 72
    expr_statement    go to state 73
    if_statement      go to state 74
    iter_statement    go to state 75
    ids               go to state 76
    expression        go to state 77
    not_expression    go to state 78
    logic_expression  go to state 79
    ar_expression     go to state 80
    pr_expression     go to state 81
    func_call         go to state 82
    literal           go to state 83


State 45

   16 function: FUNCTION ID '(' parameter_list ')' TYPEDEF type func_body •

    $default  reduce using rule 16 (function)


State 46

   18 main_function: FUNCTION MAIN '(' parameter_list ')' TYPEDEF VOID proc_body •

    $default  reduce using rule 18 (main_function)


State 47

   20 parameter_list: parameter_list ENDST ARG ids TYPEDEF type •

    $default  reduce using rule 20 (parameter_list)


State 48

   93 literal: INT •

    $default  reduce using rule 93 (literal)


State 49

   51 ids: ID •
   63 pr_expression: ID •
   69 func_call: ID • '(' arglist ')'
   70          | ID • '(' ')'

    '('  shift, and go to state 87

    ASSGN     reduce using rule 51 (ids)
    ','       reduce using rule 51 (ids)
    $default  reduce using rule 63 (pr_expression)


State 50

   94 literal: REAL •

    $default  reduce using rule 94 (literal)


State 51

   96 literal: BOOL •

    $default  reduce using rule 96 (literal)


State 52

   97 literal: STR •

    $default  reduce using rule 97 (literal)


State 53

   95 literal: CHAR •
